# calico

./: .gitignore  CMakeLists.txt  README.md  build.sh
core/: core.h
core/platf/: platf.c  platf.h
impls/platf/glfw/: glfw.c  glfw.h  glfwimpl.c
src/: main.c
state/: state.c  state.h
